Fix wrong font weight on headings.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -41,6 +41,7 @@ body {
 
 h1, h2, h3 {
   font-family: @museo_300;
+  font-weight: 300;
 }
 
 h1 {
